--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -13,4 +13,9 @@
   }
 </ul>
 
+<a href="/items/new">Add a new item.</a>
 <a href="/">Go Home</a>
+
+<form action="/items/delete" method="post">
+  <button type="submit" name="button">Clear All Items</button>
+</form>
