--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -2,24 +2,18 @@
 @{
     Layout = "_Layout";
 }
-
-<h1>To Do List</h1>
+@model List<ToDoList.Models.Item>;
+<h1>Items</h1>
 
 @if (Model.Count == 0)
 {
-  <p>There are no items in the list.</p>
+  <h3>No items have been added yet.</h3>
 }
 <ul>
   @foreach (Item item in Model)
   {
-    <li><a href='/items/@item.Id'>@item.Description </a></li>
+    <li>@Html.ActionLink($"{item.Description}","Details", new {id = item.ItemId})</li>
   }
 </ul>
 
-
-<a href="/items/new">Add a new item.</a>
-<a href="/">Go Home</a>
-
-<form action="/items/delete" method="post">
-  <button type="submit" name="button">Clear All Items</button>
-</form>
+<p>@Html.ActionLink("Add new item", "Create")</p>
