--- a/ToDoList/Views/Items/Edit.cshtml
+++ b/ToDoList/Views/Items/Edit.cshtml
@@ -14,6 +14,9 @@
     @Html.LabelFor(model => model.Description)
     @Html.EditorFor(model => model.Description)
 
+    @Html.LabelFor(model => model.Category)
+    @Html.DropDownList("CategoryId")
+
     <input type="submit" value="Save" />
 }
 <p>@Html.ActionLink("Back to list", "Index")</p>
