--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -13,6 +13,6 @@
     @Html.LabelFor(model => model.Category)
     @Html.DropDownList("CategoryId")
 
-    <input type="submit" value="Add new item" class="btn btn-default"/>
+    <input type="submit" value="Add new item" class="btn btn-primary"/>
 }
 <p>@Html.ActionLink("Show all items", "Index")</p>
