--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -10,8 +10,12 @@
     @Html.LabelFor(model => model.Description)
     @Html.TextBoxFor(model => model.Description)
 
-    @Html.LabelFor(model => model.Category)
+    @Html.Label("Select Category")
     @Html.DropDownList("CategoryId")
+
+    @Html.LabelFor(model => model.DueDate)
+    @Html.EditorFor(model => model.DueDate, new { @type = "date"})
+
 
     <input type="submit" value="Add new item" class="btn btn-primary"/>
 }
