--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -12,7 +12,17 @@
 <ul>
   @foreach (Item item in Model)
   {
-    <li>@Html.ActionLink($"{item.Description}","Details", new {id = item.ItemId}) | @item.Category.Name</li>
+    <li>
+      @if (item.Completed)
+      {
+        <i class="fa fa-check-square-o" aria-hidden="true"></i>
+      }
+      else 
+      {
+        <i class="fa fa-square-o" aria-hidden="true"></i>
+      }
+      @Html.ActionLink($"{item.Description}","Details", new {id = item.ItemId})
+      @item.DueDate</li>
   }
 </ul>
 
